Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ExprQualifiedType.out
ExprQualifiedType.java:18:9: compiler.err.unexpected.type: kindname.class,kindname.package, kindname.value
ExprQualifiedType.java:19:9: compiler.err.unexpected.type: kindname.class,kindname.package, kindname.value
2 errors
